# easy_cli_eval

./: .gitignore  README.md  pyproject.toml
configs/experiments/: gape_vs_traditional.yaml  gepa_evaluation.yaml  gepa_vs_traditional.yaml
src/llm_benchmark/: __init__.py
src/llm_benchmark/benchmarks/datasets/: loader.py
src/llm_benchmark/cli/: main.py
src/llm_benchmark/cli/commands/: compare.py  experiment.py  list_models.py  run.py  validate.py
src/llm_benchmark/core/: exceptions.py  models.py
src/llm_benchmark/evaluation/: base.py  dspy_evaluator.py  gape.py  gepa.py  traditional.py
src/llm_benchmark/evaluation/metrics/: __init__.py  calculator.py  dspy_metrics.py
src/llm_benchmark/providers/: __init__.py  base.py  factory.py  gemini.py  grok.py  openai.py
src/llm_benchmark/utils/: config.py  dspy_wrappers.py  helpers.py  logging.py
tests/: test_config.py  test_latest_models.py  test_providers.py
